TEIID-5629 upgrading to wildfly 15.0.1